src/screens/home-page/tabular-display/tabular-display.component.css
table {
  margin-top: 48px;
  width: 100%;
  border-collapse: collapse;
  table-layout: fixed;
}

th,
td {
  padding: 8px;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

thead {
  background-color: #f2f2f2;
}

tr:nth-child(even) {
  background-color: #f9f9f9;
}

.feedImage {
  width: 50px;
  height: 50px;
  object-fit: cover;
}

.imageCol {
  width: 25%;
}

.nameCol {
  width: 20%;
}

.descCol {
  width: 35%;
}

.dateCol {
  width: 20%;
}

